configure app for oidc

--- a/cmi-app/src/app/app.component.html
+++ b/cmi-app/src/app/app.component.html
@@ -8,7 +8,7 @@
 <p>
 
   <ngb-alert type="success"  [dismissible]="false">
-    <span class="user-first-name">Prénom {{ (currentUser$ | async)?.firstname }}</span>
-    <span class="user-last-name">Nom {{ (currentUser$ | async)?.lastname }}</span>
+    <span class="inscription-first-name">Prénom {{ (currentUser$ | async)?.firstname }}</span>
+    <span class="inscription-last-name">Nom {{ (currentUser$ | async)?.lastname }}</span>
   </ngb-alert>
 </p>
