--- a/cmi-app/src/app/user/user.list.component.html
+++ b/cmi-app/src/app/user/user.list.component.html
@@ -4,9 +4,9 @@
 <h2 *ngIf="isAuthenticated()">Welcome, {{(me | async).username}}</h2>
 <h2 *ngIf="isAuthenticated()">Users</h2>
 <ul class="users" *ngIf="isAuthenticated()">
-  <li *ngFor="let user of users | async">
-    {{user.username}}
-    {{user.firstName}}
-    {{user.lastName}}
+  <li *ngFor="let inscription of users | async">
+    {{inscription.username}}
+    {{inscription.firstName}}
+    {{inscription.lastName}}
   </li>
 </ul>
